--- a/Assets/style.css
+++ b/Assets/style.css
@@ -253,7 +253,7 @@ html {
 body {
 
 	margin: 0;
-	background-color: var( --color-newsprint );
+	background-color: var( --color-chalk );
 	background-image: url( 'q-background.png' );
 	background-size: 60px 60px;
 	background-attachment: fixed;
@@ -452,8 +452,9 @@ sub {
 pre {
 
 	margin: 1em 0;
-	border-radius: 0.4rem;
-	background-color: var( --background-callout-color );
+	border-radius: 0.5rem;
+	/*background-color: var( --background-callout-color );*/
+	background-color: var( --color-chalk );
 	padding:  0  0 2rem 2rem;
 	tab-size: 4;
 	-moz-tab-size: 4;
@@ -472,7 +473,7 @@ code, samp {
 samp {
 
 	/*color: var( --text-code-output-color );*/
-	color: #F43;
+	color: var( --color-green );
 }
 pre code {
 
@@ -490,7 +491,7 @@ img.figure {
 }
 .value-type {
 
-	color: #F43;
+	color: var( --color-red );
 	margin-right: 0.4em;
 }
 .expected-type {
@@ -513,13 +514,14 @@ img.figure {
 
 nav {
 
+	z-index: 50;
 	position: fixed;
 	top:  0;
 	left: 0;
 	width: 260px;
 	height: 100%;
 	min-height: 100vh;
-	background-color: var( --color-chalk );
+	background-color: var( --color-white );
 	padding: 0 0 8rem 0;
 	overflow: auto;
 	font-size:   1rem;
@@ -588,18 +590,20 @@ main {
 	top: 0;
 	left: 260px;
 	min-height: 100vh;
-	background-color: var( --color-chalk );
+	background-color: var( --color-white );
 	padding: 3rem 1rem 12rem 1rem;
 	overflow: auto;
 	min-width: 320px;
 	max-width: 620px;
 	font-size:   1.0rem;
 	line-height: 1.8rem;
+
+	box-shadow: 0 0 1rem rgba( 0, 0, 0, 0.2 );
 }
 main > h3, main > h4, main > p, main > ul, main > footer {
 
 	margin-left:  1rem;
-	/*margin-right: 1rem;*/
+	margin-right: 1rem;
 }
 main a {
 
@@ -1089,7 +1093,7 @@ table#console-open-commands .na {
 	position: absolute;
 	top:  24px;
 	left: 24px;
-	z-index: 999;
+	z-index: 40;
 }
 
 
@@ -1470,6 +1474,12 @@ table#console-open-commands .na {
 
 
 
+
+
+
+
+
+
 #veggie-burger {
 
 	display: none;
@@ -1499,7 +1509,7 @@ table#console-open-commands .na {
 		height: auto;
 		min-height: auto;
 		padding-bottom: 0;
-		box-shadow: 0 0 0.8rem rgba( 0, 0, 0, 0.5 );
+		box-shadow: 0 0 1rem rgba( 0, 0, 0, 0.3 );
 	}
 	nav ul li a {
 
@@ -1520,6 +1530,15 @@ table#console-open-commands .na {
 
 		display: block;
 	}
+
+
+
+
+
+
+
+
+
 	#veggie-burger {
 
 		z-index: 90;
@@ -1529,7 +1548,7 @@ table#console-open-commands .na {
 		top:    0;
 		width:  5rem;
 		height: 100%;
-		background-color: var( --color-white );
+		/*background-color: var( --color-white );*/
 		color: var( --hyperlink-internal-color );
 		text-align: center;
 		cursor: pointer;
@@ -1563,10 +1582,15 @@ table#console-open-commands .na {
 
 		transform: rotate( -45deg );
 	}
+
+
+
+
 	main {
 
 		left:  0;
 		width: 100%;
+		height: auto;
 		padding-top: 12rem;
 	}
 }
