--- a/Q/Styles.css
+++ b/Q/Styles.css
@@ -1,3 +1,14 @@
+/*
+
+	Copyright © 2019, Stewart Smith. See LICENSE for details.
+
+*/
+
+
+
+
+
+
 
 
 /*
@@ -7,7 +18,6 @@
 
 
 */
-
 
 
 .qjs-circuit-container {
