Test of circuit by CSS grid.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -71,6 +71,7 @@ svg, :root {
 	--color-white:     #FFFFFF;
 	--color-chalk:     #F9F9F9;
 	--color-newsprint: #F3F3F3;
+	--color-titanium:  #CCCCCC;
 	--color-slate:     #777777;
 	--color-charcoal:  #333333;
 	--color-black:     #000000;	
